[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "garage-news"
version = "0.1.0"
description = "Automated aggregation and analysis pipeline for independent garage news."
authors = [{name = "Auto Generated", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "typer>=0.9",
    "rich>=13.7"
]

[project.scripts]
garage-news = "garage_news.cli:app"
