[metadata]
name = garage-news
version = 0.1.0
description = Automated aggregation and analysis pipeline for independent garage news.
long_description = file: README.md
long_description_content_type = text/markdown
author = Auto Generated
author_email = example@example.com
license = MIT

[options]
python_requires = >=3.11
packages = find:
install_requires =
    PyYAML>=6.0
    feedparser>=6.0
    requests>=2.31
    beautifulsoup4>=4.12
    typer>=0.9
    rich>=13.7
include_package_data = True

[options.packages.find]
include = garage_news*

[options.entry_points]
console_scripts =
    garage-news = garage_news.cli:app
