[metadata]
name = garage-news
version = 0.2.0
description = Scrape news listing pages into a CSV of headlines and article text.
long_description = file: README.md
long_description_content_type = text/markdown
author = Auto Generated
author_email = example@example.com
license = MIT

[options]
python_requires = >=3.11
packages = find:
install_requires =
include_package_data = True

[options.packages.find]
include = garage_news*

[options.entry_points]
console_scripts =
    garage-news = garage_news.cli:main
